Added preamble inclusion.

--- a/inst/rmarkdown/templates/jacsm_article/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/jacsm_article/skeleton/skeleton.Rmd
@@ -19,7 +19,7 @@ abstract: >
   congue viverra fringilla.
 keywords: keywords, not capitalized, "and so on"
 preamble: >
-  \usepackage{babel}
+  % PREAMBLE GOES HERE
 output: 
   rticles::jacsm_article:
     chunk_highlight: TRUE
