Improvements, bugfixes related to layout.

--- a/inst/rmarkdown/templates/jacsm_article/resources/template.tex
+++ b/inst/rmarkdown/templates/jacsm_article/resources/template.tex
@@ -93,6 +93,13 @@ $endif$
 \usepackage[hidelinks]{hyperref}
 \urlstyle{rm}
 
+% ITEMIZE FORMATTING
+\usepackage{enumitem}
+\def\labelitemi{--}
+\setlist[itemize,1]{leftmargin=\dimexpr 26pt-.3cm}
+\setlist[enumerate,1]{leftmargin=\dimexpr 26pt-.3cm}
+\setlist{nolistsep}
+
 % NO UGLY DATE
 \date{}
 
